Refined sprite system

--- a/style.css
+++ b/style.css
@@ -337,6 +337,7 @@ a:visited
     top: 10px;
     left: 10px;
     z-index: 100;
+    display: none; /* Hide recording controls */
 }
 
 div#controls > button {
